platform/onedev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: onedev
spec:
  template:
    spec:
      containers:
        - name: onedev
          volumeMounts:
            - name: law-cacerts
              mountPath: /etc/ssl/certs/java/cacerts
              subPath: cacerts
      volumes:
        - name: law-cacerts
          configMap:
            name: law-cacerts
