platform/onedev/deploymentsecrets.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: onedev
spec:
  template:
    spec:
      containers:
        - name: onedev
